# Discord-Light

./: Cargo.toml  tauri.conf.json
.cargo/: config.toml
icons/: icon.icns
src/: log.rs  main.rs
